GiRaFFE_NRPy_Tutorial: Updated the ToC to reflect recent changes.

--- a/in_progress/GiRaFFE_NRPy_Tutorial.ipynb
+++ b/in_progress/GiRaFFE_NRPy_Tutorial.ipynb
@@ -29,15 +29,15 @@
     "        1. [Validation of all initial data choices against original `GiRaFFEfood`, demonstrating agreement to round-off error.](Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy.ipynb) <font color='green'><b> Patrick Seal of Approval</b></font>\n",
     "1. **GiRaFFE: Solve the GRFFE equations to evolve the initial data forward in time**\n",
     "    1. *Generate main C code driver* for \n",
-    "        1. [Main Driver for Unstaggered A fields GRFFE prescription](Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb) (**Status?**)\n",
-    "        1. [Main Driver for Staggered A fields GRFFE prescription](Tutorial-GiRaFFE_NRPy_Main_Driver_staggered.ipynb) (**Status?**)\n",
+    "        1. <font color='green'><b> Patrick Seal of Approval</b></font>[Main Driver for Unstaggered A fields GRFFE prescription](Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb) (**Status?**)\n",
+    "        1. <font color='green'><b> Patrick Seal of Approval</b></font>[Main Driver for Staggered A fields GRFFE prescription](Tutorial-GiRaFFE_NRPy_Main_Driver_staggered.ipynb) (**Status?**)\n",
     "    1. The above driver routine pulls together several subroutines, called in this order:\n",
     "        1. Update RHSs: Find the right-hand sides of evolution equations for the conservative variables\n",
     "            1. Calculate source terms for the $A$-field induction equation, $\\tilde{S}_i$, and $\\Phi$ (assuming the Lorenz gauge):\n",
     "                1. *Implementation*: \n",
-    "                    1. [Unstaggered prescription](Tutorial-GiRaFFE_NRPy-Source_Terms.ipynb)\n",
+    "                    1. <font color='green'><b> Patrick Seal of Approval</b></font>[Unstaggered prescription](Tutorial-GiRaFFE_NRPy-Source_Terms.ipynb)\n",
     "                        1. See also: [Tutorial for GRFFE](../Tutorial-GRFFE_Equations-Cartesian.ipynb); [Tutorial for GRHD](../Tutorial-GRHD_Equations-Cartesian.ipynb)\n",
-    "                    1. <font color='orange'><b>Document!</b></font> [Staggered prescription](Tutorial-GiRaFFE_NRPy_staggered-Source_Terms.ipynb) (**JULY 9-13**)\n",
+    "                    1. <font color='green'><b> Patrick Seal of Approval</b></font> [Staggered prescription](Tutorial-GiRaFFE_NRPy_staggered-Source_Terms.ipynb)\n",
     "                1. *Validation*:\n",
     "                    1. [Unstaggered prescription](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Source_Terms.ipynb)\n",
     "            1. <font color='green'><b> Patrick Seal of Approval </b></font>[Interpolate metric on cell faces:](Tutorial-GiRaFFE_NRPy-Metric_Face_Values.ipynb)\n",
@@ -49,11 +49,11 @@
     "            1. [<font color='green'><b>Patrick Seal of Approval</b> Calculate the flux term for $\\tilde{S}_i$:](Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb) (**JULY 2-8**)\n",
     "                1. Use the reconstructed velocities and magnetic fields on the left and right sides of the cell faces to solve the Riemann problem and compute the flux of $\\tilde{S}_i$ on the interface.\n",
     "                1. [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Stilde_flux.ipynb)\n",
-    "            1. <font color='orange'><b>Major overhaul underway</b></font> Calculate the flux term for $A_i$:\n",
+    "            1. <font color='green'><b> Patrick Seal of Approval</b></font> Calculate the flux term for $A_i$:\n",
     "                1. Here, we apply a similar algorithm as in the previous step to compute the electric field $E_i = \\epsilon_{ijk} v^i B^i$.\n",
     "                1. *Implementation*:\n",
-    "                    1. <font color='orange'><b>Document!</b></font> [Unstaggered prescription](Tutorial-GiRaFFE_NRPy-Afield_flux_handwritten.ipynb): (**JULY 9-13**)\n",
-    "                    1. <font color='orange'><b>Document!</b></font> [Staggered prescription](Tutorial-GiRaFFE_NRPy_staggered-Afield_flux.ipynb) (**JULY 9-13**) (validated against original GiRaFFE)\n",
+    "                    1. <font color='green'><b> Patrick Seal of Approval</b></font> [Unstaggered prescription](Tutorial-GiRaFFE_NRPy-Afield_flux_handwritten.ipynb)\n",
+    "                    1. <font color='green'><b> Patrick Seal of Approval</b></font> [Staggered prescription](Tutorial-GiRaFFE_NRPy_staggered-Afield_flux.ipynb) (validated against original GiRaFFE)\n",
     "                1. *Validation*:\n",
     "                    1. <font color='orange'><b>Make sure this uses the above written C codes.</b> *unstaggered* [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Afield_flux.ipynb)\n",
     "        1. Post-step: Update primitive variables from the evolved conservative variables and apply boundary conditions\n",
@@ -61,7 +61,7 @@
     "                1. Compute $B^i = \\epsilon^{ijk} \\partial_j A_k$ using standard finite-differencing methods. Care must be taken in the ghost zones to shift the template appropriately to avoid accessing points that are not stored in memory.\n",
     "                1. *Implementation*:\n",
     "                    1. <font color='green'><b> Patrick Seal of Approval</b></font> [Unstaggered prescription](Tutorial-GiRaFFE_NRPy-A2B.ipynb):\n",
-    "                    1. <font color='orange'><b>Document!</b></font> [Staggered prescription](Tutorial-GiRaFFE_NRPy_staggered-A2B.ipynb) (**JULY 9-13**)\n",
+    "                    1. <font color='green'><b> Patrick Seal of Approval</b></font> [Staggered prescription](Tutorial-GiRaFFE_NRPy_staggered-A2B.ipynb)\n",
     "                1. *Validation*:\n",
     "                    1. [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-A2B.ipynb)\n",
     "            1. <font color='orange'><b> Just spot-checking</b></font>[Recalculate $\\bar{v}^i$ and apply fixes to $\\tilde{S}_i$ and $\\bar{v}^i$:](Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb)\n",
@@ -70,6 +70,9 @@
     "            1. <font color='orange'><b> Just spot-checking</b></font>[Apply boundary conditions:](Tutorial-GiRaFFE_NRPy-BCs.ipynb)\n",
     "                1. Apply linear (To be upgraded?) outer boundary conditions to the vector potential and Valencia three-velocity. \n",
     "                1. [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-BCs.ipynb)\n",
+    "1. <font color='navy'><b>**Start-to-Finish Modules:**</b></font>\n",
+    "    1. [Unstaggered](Tutorial-Start_to_Finish-GiRaFFE_NRPy-1D_tests-new_API.ipynb)\n",
+    "    1. [Staggered](Tutorial-Start_to_Finish-GiRaFFE_NRPy-1D_tests-staggered.ipynb)\n",
     "\n",
     "**List of Critical Papers:**\n",
     "1. The original `GiRaFFE` paper: [arxiv:1704.00599](https://arxiv.org/abs/1704.00599)\n",
@@ -86,6 +89,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os,sys\n",
+    "nrpy_dir_path = os.path.join(\"..\")\n",
+    "if nrpy_dir_path not in sys.path:\n",
+    "    sys.path.append(nrpy_dir_path)\n",
+    "\n",
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
     "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"GiRaFFE_NRPy_Tutorial\")"
    ]
@@ -107,7 +115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
