--- a/in_progress/Tutorial-SEOBNR_Second_Derivative_Routine.ipynb
+++ b/in_progress/Tutorial-SEOBNR_Second_Derivative_Routine.ipynb
@@ -221,6 +221,7 @@
     "# Define a function to return a set of reasonable input parameters\n",
     "# This function contains three distinct sets of input parameters, and index differentiates between them\n",
     "def reset_values(variable):\n",
+    "    values = {}\n",
     "    # Each variable corresponds to a specific set of input parameters\n",
     "    # -f 20 -M 23 -m 10 -X 0.01 -Y 0.02 -Z -0.03 -x 0.04 -y -0.05 -z 0.06\n",
     "    if variable=='dHdpphi':\n",
@@ -232,12 +233,12 @@
     "              'KK': 5.288229332346335e-01, 'k0': -9.985821843899071e-01, 'k1': -8.345846602989615e-01,\n",
     "              'd1v2': -7.966696593617955e+01,'dheffSSv2':1.261873764525631e+01, 'EMgamma': 5.772156649015329e-01,\n",
     "             'tortoise': 1}\n",
-    "    if variable=='dHdr':\n",
+    "    if variable=='dHdr' or variable=='dHdptheta':\n",
     "        values = {'m1': 2.300000000000000e+01, 'm2': 1.000000000000000e+01, 'eta': 2.112029384756657e-01,\n",
     "                  'x': 2.129380593127755e+01, 'y': 0.000000000000000e+00, 'z': 0.000000000000000e+00,\n",
     "                  'px': 0.000000000000000e+00, 'py': 2.335719319721174e-01, 'pz': 0.000000000000000e+00,\n",
-    "                  's1x': 5.290000000000000e+00, 's1y': 1.057982019428585e+01, 's1z': -1.587011986900481e+01,\n",
-    "                  's2x': 4.000000000000000e+00, 's2y': -4.999932020459767e+00, 's2z': 6.000056648964334e+00,\n",
+    "                  's1x': 4.857667584940312e-03, 's1y': 9.715170059031998e-03, 's1z': -1.457311282736897e-02,\n",
+    "                  's2x': 3.673094582185491e-03, 's2y': -4.591305803911631e-03, 's2z': 5.509693892529232e-03,\n",
     "                  'KK': 5.288229332346335e-01, 'k0': -9.985821843899071e-01, 'k1': -8.345846602989615e-01,\n",
     "                  'd1v2': -7.966696593617955e+01,'dheffSSv2':1.261873764525631e+01, 'tortoise': 1,\n",
     "                  'EMgamma': 5.772156649015329e-01}\n",
@@ -263,7 +264,8 @@
     "# Create array of trusted LALSuite derivative values\n",
     "# Note that position in the array corresponds to the index of the corresponding input values\n",
     "#-M 13 -m 11 -X 0.1 -Y -0.2 -Z 0.3 -x -0.3 -y 0.2 -z -0.1\n",
-    "LALSuite_validated_values = {'dHdpphi': 1.021276534613563e-02, 'dHdr': -2.432655706366936e-07}\n",
+    "LALSuite_validated_values = {'dHdpphi': 1.021276534613563e-02, 'dHdr': -2.432655706366936e-07,\n",
+    "                            'dHdptheta': 1.157725233154054e-07}\n",
     "\n",
     "# Sort variables by which tortoise value we use to compute the derivatives\n",
     "variables_tort2 = [x,y,z]\n",
@@ -304,19 +306,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "og  dHdpy = 2.039241506525393e-01\n",
-      "dHdpy     = 2.039241506667963e-01\n",
+      "tru dHdpy = 2.174992815983272e-01\n",
+      "new dHdpy = 2.039241506667964e-01\n",
       "r = 2.129680593127755e+01\n",
-      "new dHdpphi = 9.575339669471425e-03\n",
+      "new dHdpphi = 9.575339669471434e-03\n",
       "tru dHdpphi = 1.021276534613563e-02\n",
-      "relative diff = 6.241460124268864e-02\n"
+      "relative diff = 6.241460124268779e-02\n"
      ]
     }
    ],
@@ -324,8 +326,8 @@
     "values = reset_values('dHdpphi')\n",
     "values = evaluate_expression(lhss,rhss,values)\n",
     "quagsire = evaluate_expression(lhss_derivative[py],rhss_derivative[py],values)\n",
-    "print(\"og  dHdpy = %.15e\" % 2.039241506525393e-01)\n",
-    "print(\"dHdpy     = %.15e\" % (quagsire['Hrealprm_py']/values['eta']))\n",
+    "print(\"tru dHdpy = %.15e\" % 2.174992815983272e-01)\n",
+    "print(\"new dHdpy = %.15e\" % (quagsire['Hrealprm_py']/values['eta']))\n",
     "print(\"r = %.15e\" % (quagsire['r']))\n",
     "new_dHdpphi = quagsire['Hrealprm_py']/quagsire['r']/values['eta']\n",
     "tru_dHdpphi = LALSuite_validated_values['dHdpphi']\n",
@@ -336,19 +338,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dHdx = -3.572873171291120e-03\n",
-      "dHdpy = 2.039477392679089e-01\n",
-      "dHdpz = 1.685661826930213e-02\n",
-      "new dHdr = -5.809977596676156e-03\n",
+      "tru dHdpz = 2.174992815983272e-01\n",
+      "new dHdpz = 2.175267508760803e-01\n",
+      "r = 2.129380593127755e+01\n",
+      "new dHdptheta = 1.157724122466894e-07\n",
+      "tru dHdptheta = 1.157725233154054e-07\n",
+      "relative diff = 9.593702621523717e-07\n"
+     ]
+    }
+   ],
+   "source": [
+    "values = reset_values('dHdptheta')\n",
+    "values = evaluate_expression(lhss,rhss,values)\n",
+    "quagsire = evaluate_expression(lhss_derivative[pz],rhss_derivative[pz],values)\n",
+    "print(\"tru dHdpz = %.15e\" % 2.174992815983272e-01)\n",
+    "print(\"new dHdpz = %.15e\" % (quagsire['Hrealprm_py']/values['eta']))\n",
+    "print(\"r = %.15e\" % (quagsire['r']))\n",
+    "new_dHdptheta = -quagsire['Hrealprm_pz']/quagsire['r']/values['eta']\n",
+    "tru_dHdptheta = LALSuite_validated_values['dHdptheta']\n",
+    "print(\"new dHdptheta = %.15e\" % new_dHdptheta)\n",
+    "print(\"tru dHdptheta = %.15e\" % tru_dHdptheta)\n",
+    "print(\"relative diff = %.15e\" % ((tru_dHdptheta-new_dHdptheta)/tru_dHdptheta))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ptheta = 0.000000000000000e+00\n",
+      "pphi = 4.973635390407829e+00\n",
+      "r = 2.129380593127755e+01\n",
+      "dHdx = 2.385784778615913e-03\n",
+      "dHdpy = 2.175267508760803e-01\n",
+      "dHdpz = -2.465235278576864e-06\n",
+      "term = 2.386052715128472e-03\n",
+      "new dHdr = -2.679365125588841e-07\n",
       "tru dHdr = -2.432655706366936e-07\n",
-      "relative diff = -2.388227119809774e+04\n"
+      "relative diff = -1.014156744730452e-01\n"
      ]
     }
    ],
@@ -360,17 +398,22 @@
     "r = quagsire['r']\n",
     "pphi = r*quagsire['py']\n",
     "ptheta = -r*quagsire['pz']\n",
+    "print(\"ptheta = %.15e\" % ptheta)\n",
+    "print(\"pphi = %.15e\" % pphi)\n",
+    "print(\"r = %.15e\" % r)\n",
+    "\n",
     "print(\"dHdx = %.15e\" % dHdx)\n",
     "values = reset_values('dHdr')\n",
     "values = evaluate_expression(lhss,rhss,values)\n",
     "quagsire = evaluate_expression(lhss_derivative[py],rhss_derivative[py],values)\n",
     "dHdpy = quagsire['Hrealprm_py']/values['eta']\n",
     "print(\"dHdpy = %.15e\" % dHdpy)\n",
-    "values = reset_values('dHdr')\n",
-    "values = evaluate_expression(lhss,rhss,values)\n",
+    "#values = reset_values('dHdr')\n",
+    "#values = evaluate_expression(lhss,rhss,values)\n",
     "quagsire = evaluate_expression(lhss_derivative[pz],rhss_derivative[pz],values)\n",
     "dHdpz = quagsire['Hrealprm_pz']/values['eta']\n",
     "print(\"dHdpz = %.15e\" % dHdpz)\n",
+    "print(\"term = %.15e\" %(dHdpy*pphi/r/r))\n",
     "\n",
     "new_dHdr = dHdx - dHdpy*pphi/r/r + dHdpz*ptheta/r/r\n",
     "tru_dHdr = LALSuite_validated_values['dHdr']\n",
