--- a/in_progress/Tutorial-GiRaFFE_NRPy_staggered-Source_Terms.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy_staggered-Source_Terms.ipynb
@@ -901,7 +901,7 @@
    ],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
-    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-GiRaFFE_NRPy_staggered-Source_Terms\")"
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-GiRaFFE_NRPy_staggered-Source_Terms\",location_of_template_file=os.path.join(\"..\"))"
    ]
   }
  ],
