--- a/in_progress/Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb
@@ -557,7 +557,7 @@
    ],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
-    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-GiRaFFE_NRPy-C2P_P2C\")"
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-GiRaFFE_NRPy-C2P_P2C\",location_of_template_file=os.path.join(\"..\"))"
    ]
   }
  ],
