--- a/in_progress/Tutorial-GiRaFFE_NRPy-Metric_Face_Values.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Metric_Face_Values.ipynb
@@ -324,7 +324,7 @@
    ],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
-    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-GiRaFFE_NRPy-Metric_Face_Values\")"
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-GiRaFFE_NRPy-Metric_Face_Values\",location_of_template_file=os.path.join(\"..\"))"
    ]
   }
  ],
