--- a/in_progress/Tutorial-GiRaFFEfood_NRPy_1D_tests-fast_wave.ipynb
+++ b/in_progress/Tutorial-GiRaFFEfood_NRPy_1D_tests-fast_wave.ipynb
@@ -348,7 +348,7 @@
    ],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
-    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-GiRaFFEfood_NRPy_1D_tests-fast_wave\")"
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-GiRaFFEfood_NRPy_1D_tests-fast_wave,location_of_template_file=os.path.join(\"..\")\")"
    ]
   }
  ],
