--- a/in_progress/Tutorial-GiRaFFEfood_NRPy_Aligned_Rotator.ipynb
+++ b/in_progress/Tutorial-GiRaFFEfood_NRPy_Aligned_Rotator.ipynb
@@ -284,7 +284,7 @@
    ],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
-    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-GiRaFFEfood_NRPy_Aligned_Rotator\")"
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-GiRaFFEfood_NRPy_Aligned_Rotator\",location_of_template_file=os.path.join(\"..\"))"
    ]
   }
  ],
@@ -304,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
