GiRaFFE_NRPy: Editing the documentation for grammar and clarity.

--- a/in_progress/Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb
@@ -34,15 +34,15 @@
     "The algorithm to do this is as follows:\n",
     "1. Apply fixes to ${\\tilde S}_i$\n",
     "    1. Enforce the orthogonality of ${\\tilde S}_i$ and $B^i$\n",
-    "        * ${\\tilde S}_i \\rightarrow {\\tilde S}_i - ({\\tilde S}_j {\\tilde B}^j) {\\tilde B}_i/{\\tilde B}^2$\n",
+    "        1. ${\\tilde S}_i \\rightarrow {\\tilde S}_i - ({\\tilde S}_j {\\tilde B}^j) {\\tilde B}_i/{\\tilde B}^2$\n",
     "    1. Rescale ${\\tilde S}_i$ to limit the Lorentz factor and enforce the velocity cap\n",
-    "        * $f = \\sqrt{(1-\\gamma_{\\max}^{-2}){\\tilde B}^4/(16 \\pi^2 \\gamma {\\tilde S}^2)}$ \n",
-    "        * ${\\tilde S}_i \\rightarrow {\\tilde S}_i \\min(1,f)$\n",
+    "        1. $f = \\sqrt{(1-\\gamma_{\\max}^{-2}){\\tilde B}^4/(16 \\pi^2 \\gamma {\\tilde S}^2)}$ \n",
+    "        1. ${\\tilde S}_i \\rightarrow {\\tilde S}_i \\min(1,f)$\n",
     "    1. Recompute the velocities at the new timestep\n",
-    "        * $v^i = 4 \\pi \\gamma^{ij} {\\tilde S}_j \\gamma^{-1/2} B^{-2}$\n",
+    "        1. $v^i = 4 \\pi \\gamma^{ij} {\\tilde S}_j \\gamma^{-1/2} B^{-2}$\n",
     "1. Enforce the Current Sheet prescription\n",
     "    1. Zero the velocity normal to the sheet\n",
-    "        * ${\\tilde n}_i v^i = 0$\n",
+    "        1. ${\\tilde n}_i v^i = 0$\n",
     "    1. Recompute the Poynting flux to be consistent.\n",
     "    \n",
     "Each of these steps can be toggled on/off by changing the following NRPy+ parameters, specified in the python module:\n",
@@ -106,16 +106,14 @@
     "\n",
     "1. Apply fixes to ${\\tilde S}_i$\n",
     "    1. Enforce the orthogonality of ${\\tilde S}_i$ and $B^i$\n",
-    "        * ${\\tilde S}_i \\rightarrow {\\tilde S}_i - ({\\tilde S}_j {\\tilde B}^j) {\\tilde B}_i/{\\tilde B}^2$\n",
+    "        1. ${\\tilde S}_i \\rightarrow {\\tilde S}_i - ({\\tilde S}_j {\\tilde B}^j) {\\tilde B}_i/{\\tilde B}^2$\n",
     "    1. Rescale ${\\tilde S}_i$ to limit the Lorentz factor and enforce the velocity cap\n",
-    "        * $f = \\sqrt{(1-\\gamma_{\\max}^{-2}){\\tilde B}^4/(16 \\pi^2 \\gamma {\\tilde S}^2)}$ \n",
-    "        * ${\\tilde S}_i \\rightarrow {\\tilde S}_i \\min(1,f)$\n",
+    "        1. $f = \\sqrt{(1-\\gamma_{\\max}^{-2}){\\tilde B}^4/(16 \\pi^2 \\gamma {\\tilde S}^2)}$ \n",
+    "        1. ${\\tilde S}_i \\rightarrow {\\tilde S}_i \\min(1,f)$\n",
     "    1. Recompute the velocities at the new timestep\n",
-    "        * $v^i = 4 \\pi \\gamma^{ij} {\\tilde S}_j \\gamma^{-1/2} B^{-2}$\n",
+    "        1. $v^i = 4 \\pi \\gamma^{ij} {\\tilde S}_j \\gamma^{-1/2} B^{-2}$\n",
     "1. Enforce the Current Sheet prescription\n",
-    "    * ${\\tilde n}_i v^i = 0$\n",
-    "\n",
-    "We will begin simply by creating the file. We will also `#include` the header file `<sys/time.h>` and define $\\pi$."
+    "    1. ${\\tilde n}_i v^i = 0$"
    ]
   },
   {
@@ -150,8 +148,7 @@
     "ValenciavU = ixp.declarerank1(\"ValenciavU\")\n",
     "\n",
     "GRHD.compute_sqrtgammaDET(gammaDD)\n",
-    "gammaUU,unusedgammadet = ixp.symm_matrix_inverter3x3(gammaDD)\n",
-    "import GiRaFFE_NRPy.GiRaFFE_NRPy_C2P_P2C as C2P_P2C\n"
+    "gammaUU,unusedgammadet = ixp.symm_matrix_inverter3x3(gammaDD)"
    ]
   },
   {
@@ -426,7 +423,9 @@
     "\n",
     "As a code validation check, we will verify agreement in the SymPy expressions between\n",
     "1. this tutorial and \n",
-    "2. the NRPy+ [GiRaFFE_NRPy/GiRaFFE_NRPy_C2P_P2C.py](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_C2P_P2C.py) module."
+    "2. the NRPy+ [GiRaFFE_NRPy/GiRaFFE_NRPy_C2P_P2C.py](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_C2P_P2C.py) module.\n",
+    "\n",
+    "We will test the C2P algorithms first."
    ]
   },
   {
@@ -443,6 +442,8 @@
     }
    ],
    "source": [
+    "import GiRaFFE_NRPy.GiRaFFE_NRPy_C2P_P2C as C2P_P2C\n",
+    "\n",
     "all_passed=True\n",
     "def comp_func(expr1,expr2,basename,prefixname2=\"C2P_P2C.\"):\n",
     "    if str(expr1-expr2)!=\"0\":\n",
@@ -479,6 +480,13 @@
     "else:\n",
     "    print(\"ERROR: AT LEAST ONE TEST DID NOT PASS\")\n",
     "    sys.exit(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we will reset the variables and test the P2C function."
    ]
   },
   {
