--- a/in_progress/GiRaFFE_NRPy_Tutorial.ipynb
+++ b/in_progress/GiRaFFE_NRPy_Tutorial.ipynb
@@ -29,8 +29,8 @@
     "        1. [Validation of all initial data choices against original `GiRaFFEfood`, demonstrating agreement to round-off error.](Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy.ipynb) <font color='green'><b> Patrick Seal of Approval</b></font>\n",
     "1. **GiRaFFE: Solve the GRFFE equations to evolve the initial data forward in time**\n",
     "    1. *Generate main C code driver* for \n",
-    "        1. <font color='green'><b> Patrick Seal of Approval</b></font>[Main Driver for Unstaggered A fields GRFFE prescription](Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb) (**Status?**)\n",
-    "        1. <font color='green'><b> Patrick Seal of Approval</b></font>[Main Driver for Staggered A fields GRFFE prescription](Tutorial-GiRaFFE_NRPy_Main_Driver_staggered.ipynb) (**Status?**)\n",
+    "        1. <font color='green'><b> Patrick Seal of Approval</b></font>[Main Driver for Unstaggered A fields GRFFE prescription](Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb)\n",
+    "        1. <font color='green'><b> Patrick Seal of Approval</b></font>[Main Driver for Staggered A fields GRFFE prescription](Tutorial-GiRaFFE_NRPy_Main_Driver_staggered.ipynb)\n",
     "    1. The above driver routine pulls together several subroutines, called in this order:\n",
     "        1. Update RHSs: Find the right-hand sides of evolution equations for the conservative variables\n",
     "            1. Calculate source terms for the $A$-field induction equation, $\\tilde{S}_i$, and $\\Phi$ (assuming the Lorenz gauge):\n",
@@ -43,7 +43,7 @@
     "            1. <font color='green'><b> Patrick Seal of Approval </b></font>[Interpolate metric on cell faces:](Tutorial-GiRaFFE_NRPy-Metric_Face_Values.ipynb)\n",
     "                1. Basic interpolation of the metric gridfunctions at cell centers to cell faces given a specific direction. \n",
     "                1. [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Metric_Face_Values.ipynb)\n",
-    "            1. <font color='orange'><b>Just spot-checking</b></font> [Reconstruct primitives on cell faces:](Tutorial-GiRaFFE_NRPy-PPM.ipynb)\n",
+    "            1. <font color='green'><b> Patrick Seal of Approval</b></font> [Reconstruct primitives on cell faces:](Tutorial-GiRaFFE_NRPy-PPM.ipynb)\n",
     "                1. This uses the piecewise-parabolic method (PPM) to reconstruct gridfunctions on cell faces and apply slope-limiting algorithms mitigate the Gibbs phenomenon and preserve shocks.\n",
     "                1. [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-PPM.ipynb)\n",
     "            1. [<font color='green'><b>Patrick Seal of Approval</b> Calculate the flux term for $\\tilde{S}_i$:](Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb) (**JULY 2-8**)\n",
@@ -64,10 +64,10 @@
     "                    1. <font color='green'><b> Patrick Seal of Approval</b></font> [Staggered prescription](Tutorial-GiRaFFE_NRPy_staggered-A2B.ipynb)\n",
     "                1. *Validation*:\n",
     "                    1. [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-A2B.ipynb)\n",
-    "            1. <font color='orange'><b> Just spot-checking</b></font>[Recalculate $\\bar{v}^i$ and apply fixes to $\\tilde{S}_i$ and $\\bar{v}^i$:](Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb)\n",
+    "            1. <font color='green'><b>Patrick Seal of Approval</b></font>[Recalculate $\\bar{v}^i$ and apply fixes to $\\tilde{S}_i$ and $\\bar{v}^i$:](Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb)\n",
     "                1. Apply fixes to $\\tilde{S}_i$, then recompute $\\bar{v}^i$ at the next time step. Then, apply fixes to $\\bar{v}^i$ to preserve current sheets, and recompute $\\tilde{S}_i$ to match.\n",
     "                1. [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-C2P_P2C.ipynb)\n",
-    "            1. <font color='orange'><b> Just spot-checking</b></font>[Apply boundary conditions:](Tutorial-GiRaFFE_NRPy-BCs.ipynb)\n",
+    "            1. <font color='green'><b>Patrick Seal of Approval</b></font>[Apply boundary conditions:](Tutorial-GiRaFFE_NRPy-BCs.ipynb)\n",
     "                1. Apply linear (To be upgraded?) outer boundary conditions to the vector potential and Valencia three-velocity. \n",
     "                1. [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-BCs.ipynb)\n",
     "1. <font color='navy'><b>**Start-to-Finish Modules:**</b></font>\n",
