--- a/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver_staggered.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver_staggered.ipynb
@@ -27,13 +27,14 @@
     "* [GiRaFFE_NRPy/GiRaFFE_NRPy_Main_Driver_staggered.py](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_Main_Driver_staggered.py)\n",
     "\n",
     "### Other critical files (in alphabetical order): \n",
-    "* [GiRaFFE_NRPy/Afield_flux.py](../../edit/in_progress/GiRaFFE_NRPy/Afield_flux.py) [\\[**tutorial**\\]](Tutorial-GiRaFFE_NRPy-Afield_flux.ipynb) Generates the expressions to find the flux term of the induction equation.\n",
-    "* [GiRaFFE_NRPy/GiRaFFE_NRPy_A2B.py](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_A2B.py) [\\[**tutorial**\\]](Tutorial-GiRaFFE_NRPy-A2B.ipynb) Generates the driver to compute the magnetic field from the vector potential/\n",
+    "* [GiRaFFE_NRPy/GiRaFFE_NRPy_staggered_Afield_flux.py](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_staggered_Afield_flux.py) [\\[**tutorial**\\]](Tutorial-GiRaFFE_NRPy_staggered-Afield_flux.ipynb) Generates the expressions to find the flux term of the induction equation.\n",
+    "* [GiRaFFE_NRPy/GiRaFFE_NRPy_staggered_A2B.py](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_staggered_A2B.py) [\\[**tutorial**\\]](Tutorial-GiRaFFE_NRPy_staggered-A2B.ipynb) Generates the driver to compute the magnetic field from the vector potential/\n",
     "* [GiRaFFE_NRPy/GiRaFFE_NRPy_BCs.py](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_BCs.py) [\\[**tutorial**\\]](Tutorial-GiRaFFE_NRPy-BCs.ipynb) Generates the code to apply boundary conditions to the vector potential, scalar potential, and three-velocity.\n",
     "* [GiRaFFE_NRPy/GiRaFFE_NRPy_C2P_P2C.py](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_C2P_P2C.py) [\\[**tutorial**\\]](Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb) Generates the conservative-to-primitive and primitive-to-conservative solvers.\n",
     "* [GiRaFFE_NRPy/GiRaFFE_NRPy_Metric_Face_Values.py](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_Metric_Face_Values.py) [\\[**tutorial**\\]](Tutorial-GiRaFFE_NRPy-Metric_Face_Values.ipynb) Generates code to interpolate metric gridfunctions to cell faces.\n",
     "* [GiRaFFE_NRPy/GiRaFFE_NRPy_PPM.py](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_PPM.py) [\\[**tutorial**\\]](Tutorial-GiRaFFE_NRPy-PPM.ipynb) Genearates code to reconstruct primitive variables on cell faces.\n",
     "* [GiRaFFE_NRPy/GiRaFFE_NRPy_Source_Terms.py](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_Source_Terms.py) [\\[**tutorial**\\]](Tutorial-GiRaFFE_NRPy-Source_Terms.ipynb) Genearates code to compute the $\\tilde{S}_i$ source term.\n",
+    "* [GiRaFFE_NRPy/GiRaFFE_NRPy_staggered_Source_Terms.py](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_staggered_Source_Terms.py) [\\[**tutorial**\\]](Tutorial-GiRaFFE_NRPy_staggered-Source_Terms.ipynb) Genearates code to compute the $A_i$ gauge term and $\\psi^6 \\Phi$ right-hand sides.\n",
     "* [GiRaFFE_NRPy/Stilde_flux.py](../../edit/in_progress/GiRaFFE_NRPy/Stilde_flux.py) [\\[**tutorial**\\]](Tutorial-GiRaFFE_NRPy-Stilde_flux.ipynb) Generates the expressions to find the flux term of the Poynting flux evolution equation.\n",
     "* [../GRFFE/equations.py](../../edit/GRFFE/equations.py) [\\[**tutorial**\\]](../Tutorial-GRFFE_Equations-Cartesian.ipynb) Generates code necessary to compute the source terms.\n",
     "* [../GRHD/equations.py](../../edit/GRHD/equations.py) [\\[**tutorial**\\]](../Tutorial-GRHD_Equations-Cartesian.ipynb) Generates code necessary to compute the source terms.\n",
@@ -51,25 +52,25 @@
     "0. [Step 0](#prelim): Preliminaries\n",
     "1. [Step 1](#rhs): Calculate the right-hand sides\n",
     "    1. [Step 1.a](#source): Calculate the source terms of $\\partial_t A_i$, $\\partial_t \\tilde{S}_i$, and $\\partial_t [\\sqrt{\\gamma} \\Phi]$ right-hand sides\n",
-    "        1. **GiRaFFE_NRPy/GiRaFFE_NRPy_Source_Terms_staggered**, **GiRaFFE_NRPy/GiRaFFE_NRPy_Source_Terms**\n",
+    "        1. [**GiRaFFE_NRPy/GiRaFFE_NRPy_staggered_Source_Terms.py**](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_staggered_Source_Terms.py), [**GiRaFFE_NRPy/GiRaFFE_NRPy_Source_Terms**](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_Source_Terms.py)\n",
     "    1. [Step 1.b](#flux): Calculate the Flux terms\n",
     "        1. In each direction: \n",
     "        1. Interpolate the metric gridfunctions to cell faces\n",
-    "            1. **GiRaFFE_NRPy/GiRaFFE_NRPy_Metric_Face_Values.py**\n",
+    "            1. [**GiRaFFE_NRPy/GiRaFFE_NRPy_Metric_Face_Values.py**](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_Metric_Face_Values.py)\n",
     "        1. Reconstruct primitives $\\bar{v}^i$ and $B^i$ on cell faces with the piecewise-parabolic method\n",
-    "            1. **GiRaFFE_NRPy/GiRaFFE_NRPy_PPM.py**\n",
+    "            1. [**GiRaFFE_NRPy/GiRaFFE_NRPy_PPM.py**](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_PPM.py)\n",
     "        1. Compute the fluxes of $\\tilde{S}_i$ and $A_i$ and add the appropriate combinations to the evolution equation right-hand sides\n",
-    "            1. **GiRaFFE_NRPy/Stilde_flux.py**, **GiRaFFE_NRPy/Afield_flux.py**\n",
+    "            1. [**GiRaFFE_NRPy/Stilde_flux.py**](../../edit/in_progress/GiRaFFE_NRPy/Stilde_flux.py), [**GiRaFFE_NRPy/GiRaFFE_NRPy_staggered_Afield_flux.py**](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_staggered_Afield_flux.py)\n",
     "1. [Step 2](#poststep): Recover the primitive variables and apply boundary conditions (post-step)\n",
     "    1. [Step 2.a](#potential_bc): Apply boundary conditions to $A_i$ and $\\sqrt{\\gamma} \\Phi$\n",
-    "        1. **GiRaFFE_NRPy/GiRaFFE_NRPy_BCs.py**\n",
+    "        1. [**GiRaFFE_NRPy/GiRaFFE_NRPy_BCs.py**](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_BCs.py)\n",
     "    1. [Step 2.b](#a2b): Compute $B^i$ from $A_i$\n",
-    "        1. **GiRaFFE_NRPy/GiRaFFE_NRPy_A2B.py**\n",
+    "        1. [**GiRaFFE_NRPy/GiRaFFE_NRPy_staggered_A2B.py**](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_staggered_A2B.py)\n",
     "    1. [Step 2.c](#c2p): Run the Conservative-to-Primitive solver\n",
     "        1. This applies fixes to $\\tilde{S}_i$, then computes $\\bar{v}^i$. A current sheet prescription is then applied to $\\bar{v}^i$, and $\\tilde{S}_i$ is recomputed to be consistent.\n",
-    "        1. **GiRaFFE_NRPy/GiRaFFE_NRPy_C2P_P2C.py**\n",
+    "        1. [**GiRaFFE_NRPy/GiRaFFE_NRPy_C2P_P2C.py**](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_C2P_P2C.py)\n",
     "    1. [Step 2.d](#velocity_bc): Apply outflow boundary conditions to $\\bar{v}^i$\n",
-    "        1. **GiRaFFE_NRPy/GiRaFFE_NRPy_BCs.py**\n",
+    "        1. [**GiRaFFE_NRPy/GiRaFFE_NRPy_BCs.py**](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_BCs.py)\n",
     "1. [Step 3](#write_out): Write out the C code function\n",
     "1. [Step 3](#code_validation): Self-Validation against `GiRaFFE_NRPy_Main_Drive.py`\n",
     "1. [Step 5](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file\n"
