--- a/in_progress/Tutorial-Start_to_Finish-GiRaFFE_NRPy-1D_tests-new_API.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish-GiRaFFE_NRPy-1D_tests-new_API.ipynb
@@ -35,17 +35,7 @@
     "* [../GRFFE/equations.py](../../edit/GRFFE/equations.py) [\\[**tutorial**\\]](../Tutorial-GRFFE_Equations-Cartesian.ipynb) Generates code necessary to compute the source terms.\n",
     "* [../GRHD/equations.py](../../edit/GRHD/equations.py) [\\[**tutorial**\\]](../Tutorial-GRHD_Equations-Cartesian.ipynb) Generates code necessary to compute the source terms.\n",
     "\n",
-    "Here we use NRPy+ to generate the C source code necessary to set up initial data for an Alfv&eacute;n wave (see [the original GiRaFFE paper](https://arxiv.org/pdf/1704.00599.pdf)). Then we use it to generate the RHS expressions for [Method of Lines](https://reference.wolfram.com/language/tutorial/NDSolveMethodOfLines.html) time integration based on the [explicit Runge-Kutta fourth-order scheme](https://en.wikipedia.org/wiki/Runge%E2%80%93Kutta_methods) (RK4).\n",
-    "\n",
-    "The entire algorithm is outlined below, with NRPy+-based components highlighted in <font color='green'>green</font>.\n",
-    "\n",
-    "1. Allocate memory for gridfunctions, including temporary storage for the RK4 time integration.\n",
-    "1. (**Step 2** below) <font color='green'>Set gridfunction values to initial data (**[documented in previous module](Tutorial-GiRaFFEfood_HO_1D_tests.ipynb)**).</font>\n",
-    "1. <font color='green'>Evolve the initial data forward in time using RK4 time integration.</font> At each RK4 substep, do the following:\n",
-    "    1. (**Step 3A** below) <font color='green'>Evaluate GRFFE RHS expressions.</font>\n",
-    "    1. (**Step 4** below) Apply singular, curvilinear coordinate boundary conditions [*a la* the SENR/NRPy+ paper](https://arxiv.org/abs/1712.07658)\n",
-    "1. (**Step 3B** below) At the end of each iteration in time, output the <font color='green'>FFE variables</font>. (This is in Step 3B, because Step 4 requires that *all* gridfunctions be defined.)\n",
-    "1. Repeat above steps at two numerical resolutions to confirm convergence to the expected value."
+    "Here we use NRPy+ to generate the C source code necessary to set up initial data for an Alfv&eacute;n wave (see [the original GiRaFFE paper](https://arxiv.org/pdf/1704.00599.pdf)). Then we use it to generate the RHS expressions for [Method of Lines](https://reference.wolfram.com/language/tutorial/NDSolveMethodOfLines.html) time integration based on the [explicit Runge-Kutta fourth-order scheme](https://en.wikipedia.org/wiki/Runge%E2%80%93Kutta_methods) (RK4)."
    ]
   },
   {
@@ -135,7 +125,7 @@
     "# Step 2: Output C code for GRFFE evolution \\[Back to [top](#toc)\\]\n",
     "$$\\label{grffe}$$\n",
     "\n",
-    "We will first write the the C codes needed for GRFFE evolution. We have already written a module to generate all these codes in order and call the functions in the appropriate order, so we will import that here. We will take the slightly unusual step of doing this before we generate the initial data functions because the main driver module will register all the gridfunctions we need. We will also include the file early on, because it will generate functions that, in addition to their normal spot in the MoL timestepping, will need to be called during the initial data step to make sure all the variables are appropriately filled in. "
+    "We will first write the C codes needed for GRFFE evolution. We have already written a module to generate all these codes and call the functions in the appropriate order, so we will import that here. We will take the slightly unusual step of doing this before we generate the initial data functions because the main driver module will register all the gridfunctions we need. It will also generate functions that, in addition to their normal spot in the MoL timestepping, will need to be called during the initial data step to make sure all the variables are appropriately filled in. "
    ]
   },
   {
@@ -157,12 +147,6 @@
       "Output C function calculate_E_field_D1_left() to file GiRaFFE_standalone_Ccodes/RHSs\\calculate_E_field_D1_left.h\n",
       "Output C function calculate_E_field_D2_right() to file GiRaFFE_standalone_Ccodes/RHSs\\calculate_E_field_D2_right.h\n",
       "Output C function calculate_E_field_D2_left() to file GiRaFFE_standalone_Ccodes/RHSs\\calculate_E_field_D2_left.h\n",
-      "Output C function calculate_Stilde_flux_D0_right() to file GiRaFFE_standalone_Ccodes/RHSs\\calculate_Stilde_flux_D0_right.h\n",
-      "Output C function calculate_Stilde_flux_D0_left() to file GiRaFFE_standalone_Ccodes/RHSs\\calculate_Stilde_flux_D0_left.h\n",
-      "Output C function calculate_Stilde_flux_D1_right() to file GiRaFFE_standalone_Ccodes/RHSs\\calculate_Stilde_flux_D1_right.h\n",
-      "Output C function calculate_Stilde_flux_D1_left() to file GiRaFFE_standalone_Ccodes/RHSs\\calculate_Stilde_flux_D1_left.h\n",
-      "Output C function calculate_Stilde_flux_D2_right() to file GiRaFFE_standalone_Ccodes/RHSs\\calculate_Stilde_flux_D2_right.h\n",
-      "Output C function calculate_Stilde_flux_D2_left() to file GiRaFFE_standalone_Ccodes/RHSs\\calculate_Stilde_flux_D2_left.h\n",
       "Output C function GiRaFFE_NRPy_cons_to_prims() to file GiRaFFE_standalone_Ccodes/C2P\\GiRaFFE_NRPy_cons_to_prims.h\n",
       "Output C function GiRaFFE_NRPy_prims_to_cons() to file GiRaFFE_standalone_Ccodes/C2P\\GiRaFFE_NRPy_prims_to_cons.h\n"
      ]
@@ -711,10 +695,10 @@
      "text": [
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -O2 -g -fopenmp GiRaFFE_standalone_Ccodes/GiRaFFE_NRPy_standalone.c -o GiRaFFE_standalone_Ccodes/output\\GiRaFFE_NRPy_standalone.exe -lm`...\n",
-      "(BENCH): Finished executing in 8.40433120727539 seconds.\n",
+      "(BENCH): Finished executing in 4.020005702972412 seconds.\n",
       "Finished compilation.\n",
       "(EXEC): Executing `cmd /c GiRaFFE_NRPy_standalone 119 7 7`...\n",
-      "(BENCH): Finished executing in 9.142237663269043 seconds.\n"
+      "(BENCH): Finished executing in 5.850008249282837 seconds.\n"
      ]
     }
    ],
@@ -777,7 +761,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0037285719931043587\n"
+      "0.0037285717317878716\n"
      ]
     }
    ],
@@ -797,14 +781,6 @@
     "predicted_order = 2.0\n",
     "column = 3\n",
     "plt.figure()\n",
-    "plt.plot(Data_exact[:,0],Data_numer[:,column]-Data_exact[:,column],'.',label=\"dx\")\n",
-    "# plt.plot(Data_exa_2[:,0],(Data_num_2[:,column]-Data_exa_2[:,column])*(2**predicted_order),'.',label=\"dx/2, *2^2\")\n",
-    "plt.legend()\n",
-    "# plt.xlim(-0.12,0.12)\n",
-    "plt.xlabel(\"x\")\n",
-    "plt.ylabel(\"Rel. Error BU2\")\n",
-    "plt.show()\n",
-    "plt.figure()\n",
     "# # plt.plot(Data_exact[2:-2,0],np.log2(np.absolute((Data_numer[2:-2,column]-Data_exact[2:-2,column])/\\\n",
     "# #                                     (Data_num_2[2:-2:2,column]-Data_exa_2[2:-2:2,column]))),'.')\n",
     "plt.plot(Data_exact[:,0],Data_exact[:,column])\n",
@@ -815,8 +791,6 @@
     "# plt.xlabel(\"x\")\n",
     "# plt.ylabel(\"BU2\")\n",
     "plt.show()\n",
-    "data_list = Data_exact[:,column]-Data_numer[:,column]\n",
-    "print(np.sqrt(np.sum(np.square(data_list))/len(data_list)))\n",
     "\n",
     "# #          0   1     2     3     4     5     6     7          8          9          10            11            12             13\n",
     "# labels = [\"x\",\"BU0\",\"BU1\",\"BU2\",\"AD0\",\"AD1\",\"AD2\",\"StildeD0\",\"StildeD1\",\"StildeD2\",\"ValenciavU0\",\"ValenciavU1\",\"ValenciavU2\", \"psi6Phi\"]\n",
@@ -874,7 +848,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[2KProcessing file GiRaFFE_standalone_Ccodes\\output\\out119-00000040.txtProcessing file GiRaFFE_standalone_Ccodes\\output\\out119-00000003.txtProcessing file GiRaFFE_standalone_Ccodes\\output\\out119-00000005.txtProcessing file GiRaFFE_standalone_Ccodes\\output\\out119-00000006.txtProcessing file GiRaFFE_standalone_Ccodes\\output\\out119-00000012.txtProcessing file GiRaFFE_standalone_Ccodes\\output\\out119-00000013.txtProcessing file GiRaFFE_standalone_Ccodes\\output\\out119-00000017.txtProcessing file GiRaFFE_standalone_Ccodes\\output\\out119-00000023.txtProcessing file GiRaFFE_standalone_Ccodes\\output\\out119-00000030.txtProcessing file GiRaFFE_standalone_Ccodes\\output\\out119-00000038.txt\r"
+      "\u001b[2KProcessing file GiRaFFE_standalone_Ccodes\\output\\out119-00000040.txt\r"
      ]
     }
    ],
@@ -987,7 +961,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-GiRaFFE_NRPy_Main_Driver\",location_of_template_file=os.path.join(\"..\"))"
+   ]
   }
  ],
  "metadata": {
