Tutorial-ScalarWave.ipynb: Update SphericalGaussian solution for consistency with ScalarWave Python module

--- a/Tutorial-ScalarWave.ipynb
+++ b/Tutorial-ScalarWave.ipynb
@@ -209,8 +209,7 @@
       "    */\n",
       "   rhs_gfs[IDX2(UUGF, i0)] = vv;\n",
       "   rhs_gfs[IDX2(VVGF, i0)] = uu_dDD00*((wavespeed)*(wavespeed));\n",
-      "}\n",
-      "\n"
+      "}\n"
      ]
     }
    ],
@@ -374,8 +373,7 @@
       "   const REAL_SIMD_ARRAY __RHS_exp_1 = MulSIMD(MulSIMD(wavespeed, wavespeed), AddSIMD(uu_dDD00, AddSIMD(uu_dDD11, uu_dDD22)));\n",
       "   WriteSIMD(&rhs_gfs[IDX4(UUGF, i0, i1, i2)], __RHS_exp_0);\n",
       "   WriteSIMD(&rhs_gfs[IDX4(VVGF, i0, i1, i2)], __RHS_exp_1);\n",
-      "}\n",
-      "\n"
+      "}\n"
      ]
     }
    ],
@@ -585,7 +583,7 @@
     "\n",
     "Here we will implement the spherical Gaussian solution, consists of ingoing and outgoing wave fronts:\n",
     "\\begin{align}\n",
-    "u(r,t) &= u_{\\rm out}(r,t) + u_{\\rm in}(r,t),\\ \\ \\text{where}\\\\\n",
+    "u(r,t) &= u_{\\rm out}(r,t) + u_{\\rm in}(r,t) + 1,\\ \\ \\text{where}\\\\\n",
     "u_{\\rm out}(r,t) &=\\frac{r-ct}{r} \\exp\\left[\\frac{-(r-ct)^2}{2 \\sigma^2}\\right] \\\\\n",
     "u_{\\rm in}(r,t) &=\\frac{r+ct}{r} \\exp\\left[\\frac{-(r+ct)^2}{2 \\sigma^2}\\right] \\\\\n",
     "\\end{align}\n",
@@ -614,7 +612,7 @@
     "# Step 5: Set initial data for uu and vv, where vv_ID = \\partial_t uu_ID.\n",
     "uu_ID_SphericalGaussianOUT = +(r - wavespeed*time)/r * sp.exp( -(r - wavespeed*time)**2 / (2*sigma**2) )\n",
     "uu_ID_SphericalGaussianIN  = +(r + wavespeed*time)/r * sp.exp( -(r + wavespeed*time)**2 / (2*sigma**2) )\n",
-    "uu_ID_SphericalGaussian = uu_ID_SphericalGaussianOUT + uu_ID_SphericalGaussianIN\n",
+    "uu_ID_SphericalGaussian = uu_ID_SphericalGaussianOUT + uu_ID_SphericalGaussianIN + sp.sympify(1)\n",
     "vv_ID_SphericalGaussian = sp.diff(uu_ID_SphericalGaussian, time)"
    ]
   },
